refactor: DDL 全面重构 — Flyway 迁移 + Long ID 统一
- 删除 ddl.sql，引入 Flyway 管理数据库迁移 (V1~V3)
- content_block 拆分为 chapter_content_block + article_content_block
- user_permission 合并到 user.permission_level
- 修复 user_quiz_answer 外键 (quiz_id→quiz.id, option_id→quiz_option.id)
- ID 策略统一为 bigint unsigned + 雪花算法，Java 侧 Long + ToStringSerializer
- 字段类型统一: datetime(3), tinyint(1), utf8mb4, DYNAMIC
- cover_image_hash→cover_image_id, category_couse→category_course
- 100+ 测试文件适配 String→Long ID 类型变更
- 新增 spring.flyway.baseline-on-migrate 配置兼容旧库
- CI seed SQL 同步更新

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>